[gd_scene load_steps=24 format=2]

[ext_resource path="res://OneToggleButtonVBoxContaner.cs" type="Script" id=1]
[ext_resource path="res://Node/font/PT_Sans_Narrow/PTSansNarrow-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://AlgorithmScenes/Screen/button_theme.tres" type="Theme" id=3]
[ext_resource path="res://AlgorithmScenes/Screen/graph_screen.gd" type="Script" id=4]
[ext_resource path="res://AlgorithmScenes/Code/null_effect.gd" type="Script" id=5]
[ext_resource path="res://AlgorithmScenes/Code/CodeLine.tscn" type="PackedScene" id=6]
[ext_resource path="res://AlgorithmScenes/Code/code_block.gd" type="Script" id=7]
[ext_resource path="res://AlgorithmScenes/BFSAlgorithm/1_take_node_0.gd" type="Script" id=8]
[ext_resource path="res://Node/font/PT_Sans_Narrow/PTSansNarrow-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://AlgorithmScenes/Screen/Slot.tscn" type="PackedScene" id=10]
[ext_resource path="res://AlgorithmScenes/Code/debug_block.gd" type="Script" id=11]
[ext_resource path="res://AlgorithmScenes/Screen/structure_queue.png" type="Texture" id=12]
[ext_resource path="res://AlgorithmScenes/Code/ADTs/queue_adt.gd" type="Script" id=13]
[ext_resource path="res://AlgorithmScenes/Screen/popup_for_object_creation.gd" type="Script" id=14]
[ext_resource path="res://AlgorithmScenes/BFSAlgorithm/2_queue.gd" type="Script" id=15]
[ext_resource path="res://AlgorithmScenes/Code/focused_line_code_style.tres" type="StyleBox" id=16]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.396078, 1, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
border_color = Color( 1, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 100.442, 152.984 )

[sub_resource type="Animation" id=11]
resource_name = "message_modulation"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CodeBlock" type="ScrollContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -409.0
margin_top = 12.0
margin_right = -14.0
margin_bottom = 315.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LinesContainer" type="VBoxContainer" parent="CanvasLayer/CodeBlock"]
margin_left = 4.0
margin_top = 4.0
margin_right = 391.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 0

[node name="PanelContainer0" parent="CanvasLayer/CodeBlock/LinesContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 387.0
margin_bottom = 42.0
custom_styles/panel = ExtResource( 16 )
focused = true
code_text = "BFS(starting_node=0):"
effect_check = ExtResource( 5 )

[node name="MarginContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer0" index="0"]
margin_right = 387.0
margin_bottom = 42.0

[node name="HBoxContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer0/MarginContainer" index="0"]
margin_right = 387.0

[node name="InstructionPointer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer0/MarginContainer/HBoxContainer" index="0"]
visible = true

[node name="CodeText" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer0/MarginContainer/HBoxContainer" index="2"]
margin_right = 274.0
text = "BFS(starting_node=0):"

[node name="PanelContainer1" parent="CanvasLayer/CodeBlock/LinesContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 387.0
margin_bottom = 84.0
size_flags_horizontal = 1
line_index = 1
code_text = "    t = starting_node;"
effect_check = ExtResource( 8 )

[node name="PanelContainer2" parent="CanvasLayer/CodeBlock/LinesContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 387.0
margin_bottom = 126.0
size_flags_horizontal = 1
line_index = 2
code_text = "    q = Queue();"
effect_check = ExtResource( 15 )

[node name="MarginContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer2" index="0"]
margin_right = 387.0
margin_bottom = 42.0

[node name="HBoxContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer2/MarginContainer" index="0"]
margin_right = 387.0

[node name="CodeText" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer2/MarginContainer/HBoxContainer" index="2"]
margin_right = 194.0
text = "    q = Queue();"

[node name="PanelContainer3" parent="CanvasLayer/CodeBlock/LinesContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 126.0
margin_right = 387.0
margin_bottom = 168.0
size_flags_horizontal = 1
line_index = 3
code_text = "    q.add(t);"
effect_check = ExtResource( 5 )

[node name="MarginContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer3" index="0"]
margin_right = 387.0
margin_bottom = 42.0

[node name="HBoxContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer3/MarginContainer" index="0"]
margin_right = 387.0

[node name="CodeText" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer3/MarginContainer/HBoxContainer" index="2"]
margin_right = 151.0
text = "    q.add(t);"

[node name="PanelContainer4" parent="CanvasLayer/CodeBlock/LinesContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 387.0
margin_bottom = 210.0
size_flags_horizontal = 1
line_index = 4
code_text = "    while q.is_not_empty():"
effect_check = ExtResource( 5 )

[node name="MarginContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer4" index="0"]
margin_right = 387.0
margin_bottom = 42.0

[node name="HBoxContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer4/MarginContainer" index="0"]
margin_right = 387.0

[node name="CodeText" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer4/MarginContainer/HBoxContainer" index="2"]
margin_right = 314.0
text = "    while q.is_not_empty():"

[node name="PanelContainer5" parent="CanvasLayer/CodeBlock/LinesContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 387.0
margin_bottom = 252.0
size_flags_horizontal = 1
line_index = 5
code_text = "        v = q.top()"
effect_check = ExtResource( 5 )

[node name="MarginContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer5" index="0"]
margin_right = 387.0
margin_bottom = 42.0

[node name="HBoxContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer5/MarginContainer" index="0"]
margin_right = 387.0

[node name="CodeText" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer5/MarginContainer/HBoxContainer" index="2"]
margin_right = 198.0
text = "        v = q.top()"

[node name="PanelContainer6" parent="CanvasLayer/CodeBlock/LinesContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 252.0
margin_right = 387.0
margin_bottom = 252.0
size_flags_horizontal = 1
line_index = 6
code_text = "    q.add(t);"
effect_check = ExtResource( 5 )

[node name="MarginContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer6" index="0"]
visible = false
margin_right = 387.0
margin_bottom = 42.0

[node name="HBoxContainer" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer6/MarginContainer" index="0"]
visible = false
margin_right = 387.0

[node name="CodeText" parent="CanvasLayer/CodeBlock/LinesContainer/PanelContainer6/MarginContainer/HBoxContainer" index="2"]
margin_right = 151.0
text = "    q.add(t);"

[node name="LeftPanel" type="VBoxContainer" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 206.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeSelector" type="MarginContainer" parent="CanvasLayer/LeftPanel"]
margin_right = 205.0
margin_bottom = 90.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/LeftPanel/ModeSelector"]
margin_right = 205.0
margin_bottom = 90.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OneToggleButtonVBoxContainer" type="VBoxContainer" parent="CanvasLayer/LeftPanel/ModeSelector/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 195.0
margin_bottom = 80.0
theme = SubResource( 8 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
available_modes = [ "SelectNode", "AllowGraphMovement" ]

[node name="SelectNodeButton" type="Button" parent="CanvasLayer/LeftPanel/ModeSelector/PanelContainer/OneToggleButtonVBoxContainer"]
margin_right = 185.0
margin_bottom = 33.0
toggle_mode = true
text = "Select Mode"

[node name="AllowGraphMovementButton" type="Button" parent="CanvasLayer/LeftPanel/ModeSelector/PanelContainer/OneToggleButtonVBoxContainer"]
margin_top = 37.0
margin_right = 185.0
margin_bottom = 70.0
theme = ExtResource( 3 )
toggle_mode = true
pressed = true
text = " Move Nodes Mode"

[node name="DebugBlock" type="ScrollContainer" parent="CanvasLayer/LeftPanel"]
margin_top = 94.0
margin_right = 205.0
margin_bottom = 394.0
rect_min_size = Vector2( 0, 300 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LinesContainer" type="VBoxContainer" parent="CanvasLayer/LeftPanel/DebugBlock"]
margin_left = 4.0
margin_top = 4.0
margin_right = 201.0
margin_bottom = 35.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/LeftPanel/DebugBlock/LinesContainer"]
margin_right = 197.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="DebuggerTitle" type="Label" parent="CanvasLayer/LeftPanel/DebugBlock/LinesContainer"]
margin_top = 4.0
margin_right = 197.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 9 )
text = "Heap"
align = 1
uppercase = true

[node name="Area2D" type="Area2D" parent="CanvasLayer/LeftPanel/DebugBlock"]
position = Vector2( 41.2171, -0.0319672 )
z_index = 15
z_as_relative = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/LeftPanel/DebugBlock/Area2D"]
position = Vector2( 60.6882, 147.465 )
z_index = 5
z_as_relative = false
shape = SubResource( 10 )

[node name="ADTSelectionPanel" type="MarginContainer" parent="CanvasLayer/LeftPanel"]
margin_top = 398.0
margin_right = 205.0
margin_bottom = 598.0
rect_min_size = Vector2( 170, 200 )
mouse_filter = 2
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/LeftPanel/ADTSelectionPanel"]
margin_right = 205.0
margin_bottom = 200.0
mouse_filter = 2
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LeftPanel/ADTSelectionPanel"]
margin_right = 205.0
margin_bottom = 200.0
mouse_filter = 2

[node name="DebuggerTitle" type="Label" parent="CanvasLayer/LeftPanel/ADTSelectionPanel/VBoxContainer"]
margin_right = 205.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 9 )
text = "Data Structures"
align = 1

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/LeftPanel/ADTSelectionPanel/VBoxContainer"]
margin_top = 31.0
margin_right = 205.0
margin_bottom = 171.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
custom_constants/vseparation = 100
custom_constants/hseparation = 60
columns = 2

[node name="Slot" parent="CanvasLayer/LeftPanel/ADTSelectionPanel/VBoxContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
hover_text = "Queue"
slot_texture = ExtResource( 12 )
generated_adt = ExtResource( 13 )

[node name="Slot2" parent="CanvasLayer/LeftPanel/ADTSelectionPanel/VBoxContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 140.0
grow_horizontal = 1
grow_vertical = 1
hover_text = "Stack"

[node name="Slot3" parent="CanvasLayer/LeftPanel/ADTSelectionPanel/VBoxContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 40.0
margin_bottom = 140.0
grow_horizontal = 1
grow_vertical = 1
rect_min_size = Vector2( 40, 40 )
hover_text = "Array"

[node name="Slot4" parent="CanvasLayer/LeftPanel/ADTSelectionPanel/VBoxContainer/GridContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 100.0
margin_right = 140.0
margin_bottom = 140.0
grow_horizontal = 1
grow_vertical = 1
rect_min_size = Vector2( 40, 40 )
hover_text = "Set"

[node name="Popup" type="WindowDialog" parent="."]
visible = true
margin_left = 523.0
margin_top = 233.47
margin_right = 1035.0
margin_bottom = 392.47
popup_exclusive = true
window_title = "Assign name to Data Structure"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explanation" type="Label" parent="Popup"]
margin_left = 5.0
margin_top = 13.0
margin_right = 506.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
text = "You are about to create a Queue, please, specify its name"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorNotification" type="Label" parent="Popup"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 5.52972
margin_top = 87.6922
margin_right = 506.53
margin_bottom = 113.692
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.878431, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
text = "Invalid name for variable"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Popup/ErrorNotification"]
anims/message_modulation = SubResource( 11 )

[node name="NameAssign" type="LineEdit" parent="Popup"]
margin_left = 66.0
margin_top = 44.0
margin_right = 441.0
margin_bottom = 84.0
align = 1
placeholder_text = "Variable/Object name..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterButton" type="Button" parent="Popup"]
modulate = Color( 0.121569, 0.913725, 0, 1 )
margin_left = 195.42
margin_top = 118.366
margin_right = 289.42
margin_bottom = 144.366
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Popup"]

[connection signal="pressed" from="CanvasLayer/LeftPanel/ModeSelector/PanelContainer/OneToggleButtonVBoxContainer/SelectNodeButton" to="." method="_on_SelectNodeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/LeftPanel/ModeSelector/PanelContainer/OneToggleButtonVBoxContainer/AllowGraphMovementButton" to="." method="_on_AllowGraphMovementButton_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/LeftPanel/DebugBlock/Area2D" to="CanvasLayer/LeftPanel/DebugBlock" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/LeftPanel/DebugBlock/Area2D" to="CanvasLayer/LeftPanel/DebugBlock" method="_on_Area2D_mouse_exited"]
[connection signal="text_entered" from="Popup/NameAssign" to="Popup" method="_on_NameAssign_text_entered"]
[connection signal="pressed" from="Popup/EnterButton" to="Popup" method="_on_EnterButton_pressed"]

[editable path="CanvasLayer/CodeBlock/LinesContainer/PanelContainer0"]
[editable path="CanvasLayer/CodeBlock/LinesContainer/PanelContainer2"]
[editable path="CanvasLayer/CodeBlock/LinesContainer/PanelContainer3"]
[editable path="CanvasLayer/CodeBlock/LinesContainer/PanelContainer4"]
[editable path="CanvasLayer/CodeBlock/LinesContainer/PanelContainer5"]
[editable path="CanvasLayer/CodeBlock/LinesContainer/PanelContainer6"]
